Fix background-attachment on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,13 @@ section {
 
 .btn:hover {
   background-color: #333;
+  cursor: pointer;
+}
+
+@media (max-width: 900px) {
+  .introduction {
+    background-attachment: unset;
+  }
 }
 
 @media (max-width: 1600px) {
